--- a/MovieRecommendation/TestRecommendation/collaborativeRecommendation.ipynb
+++ b/MovieRecommendation/TestRecommendation/collaborativeRecommendation.ipynb
@@ -1203,7 +1203,7 @@
     "id": "6qTmv1prw6NX"
    },
    "source": [
-    "For movie with ID 506, we get an estimated prediction of 2.90. One feature of this recommender system is that it does not care what the movie is (or what it contains). It works purely on the basis of an assigned movie ID and tries to predict ratings based on how the other users have predicted the movie."
+    "For movie with ID 506, we get an estimated prediction of 2.90"
    ]
   },
   {
